old_installation_iterations/tig-k8s/ingress/tetragon-tig-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: tig
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: ImplementationSpecific
        backend:
          service:
            name: tetragon-tig-service
            port: 
              number: 3000
      - path: /influxdb
        pathType: Prefix
        backend:
          service:
            name: tetragon-tig-service
            port: 
              number: 8086
